--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6840ed0e",
    "metadata": {},
    "outputs": [],
@@ -11,11 +11,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.linear_model import Lasso\n",
-    "from sklearn.linear_model import Ridge\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n"
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
