--- a/Salary_Prediction.ipynb
+++ b/Salary_Prediction.ipynb
@@ -1067,6 +1067,14 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "id": "530f27a5",
+            "metadata": {},
+            "source": [
+                "![cross_validation](cv.png)"
+            ]
+        },
+        {
             "cell_type": "code",
             "execution_count": 31,
             "id": "8d20c332",
